style what we do section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- end hero-->
 
   <!-- "what we do" section -->
-  <section id="what-we-do">
+  <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat quaerat natus tenetur sed sequi sunt aut. Perferendis itaque culpa placeat voluptas mollitia quaerat quisquam illo harum? Harum, molestias? Consectetur.
