--- a/index.html
+++ b/index.html
@@ -102,8 +102,38 @@
   </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam ullam qui necessitatibus sint et repudiandae ut enim dolores maiores veniam. Aut tempora quia ipsa voluptas, asperiores illo minus quidem ea.</p>
+      </div>
+    </article>
+  <!--second trainer bio-->
+  <article class="trainer">
+    <div class="trainer-bio text-right">
+      <h3>Joanna Gill</h3>
+      <h4>Endurance</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente, provident at dolor illo numquam eius quis placeat magnam, libero maiores, atque sequi neque. Corporis voluptates voluptas odit natus quae!
+      </p>
+    </div>
+    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+  </article>
+
+  <!-- third trainer bio-->
+  <article class="trainer">
+    <img src=" ./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <div class="trainer-bio text-left">
+      <h3>Harry "the Headband" Smith</h3>
+      <h4>Strength</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur expedita unde dolorem dignissimos temporibus debitis. Doloribus laborum sequi reprehenderit excepturi cumque, praesentium alias inventore quod exercitationem veritatis, eligendi voluptates earum.
+      </p>
+    </div>
+  </article>
   </section>
 
   <!-- "reach out" section -->
