--- a/index.html
+++ b/index.html
@@ -139,6 +139,25 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.7563548823887!2d-75.59608907974867!3d45.31334712502604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0a1f8cc3c21f%3A0x11b73975d2a31ba5!2s619%20Sora%20Wy%2C%20Ottawa%2C%20ON%20K0A%202P0!5e0!3m2!1sen!2sca!4v1637282933792!5m2!1sen!2sca" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+        <br/>
+        Let us know and we'll be happy to talk to you!
+      </p>
+      <address>
+        55 Main Street <br/>
+        Some Town, Ca <br/>
+        12345<br/>
+        P: 555.RUN.BUDZ (555.786.2839)<br/>
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
   </section>
 
   <!-- footer -->
