--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-cta">
+      <h2>Start Building Habits</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, nemo reprehenderit optio eveniet sed suscipit iusto! Consequuntur perferendis, magni sunt molestiae rerum repudiandae quasi impedit ipsum, atque architecto nemo repellat?
+      </p>
+    </div>
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
